# device_faker

./: Cargo.toml  build_android.py  pack_module.py
.github/workflows/: build.yml
device_faker/: Cargo.toml
device_faker/src/: config.rs  hooks.rs  lib.rs
device_faker_cli/: Cargo.toml
device_faker_cli/src/: converter.rs  main.rs
docs/: CHANGELOG.md  CONFIG.md  README.md
docs/en/: CHANGELOG.md  CONFIG.md  README.md
docs/tr/: README.md
module/: config.toml  customize.sh  module.prop  uninstall.sh
module/webroot/: index.html
module/webroot/assets/: css-CDITTuc0.js  css-dXFiHnNu.js  index-17Oqvd-h.css  index-BIiSeKi5.js  index-C5Dp95HG.css  index-C6I_iNVY.js  index-CD7YG6r2.js  index-CPsuawGD.css  index-IrHaPSML.js  index-OFmcM2Em.js
src/: config.rs  file_logger.rs  hooks.rs  lib.rs  state.rs
webui/: components.d.ts  eslint.config.js  package-lock.json  package.json
webui/src/: App.vue  style.css
webui/src/components/: OnlineTemplateDialog.vue  OnlineTemplateLibraryView.vue  OnlineTemplateVirtualList.vue
webui/src/components/apps/: AppConfigDialog.vue
webui/src/composables/: useDeviceFakerForm.ts  useModalHistory.ts  useOverscrollBounce.ts  usePageHistory.ts  usePageNavigation.ts  usePageSwipe.ts
webui/src/pages/: AppsPage.vue  SettingsPage.vue  StatusPage.vue  TemplatePage.vue
webui/src/stores/: apps.ts  config.ts  navigation.ts  onlineTemplates.ts  settings.ts
webui/src/types/: index.ts
webui/src/utils/: Spring.ts  config.ts  i18n.ts  ksu.ts  onlineTemplates.ts
xtask/: Cargo.toml
xtask/src/: main.rs
(+5 files in other folders)
